fix api update employer